fixed app  width on mobile viewports

--- a/src/components/Layout/Header.scss
+++ b/src/components/Layout/Header.scss
@@ -2,6 +2,7 @@
 @use '../../assets/animations.scss';
 
 .header {
+	max-width: 100vw;
 	margin: 2em 0 8em;
 	overflow: hidden;
 
