--- a/src/components/Layout/Main.scss
+++ b/src/components/Layout/Main.scss
@@ -1,6 +1,8 @@
 @use '../../assets/colors.scss';
 
 .main {
+	max-width: 100vw;
 	padding: 3em 0;
 	background: colors.$gray;
+	overflow: hidden;
 }
